deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
   matchLabels:
    app: myapp
    version: blue
  template:
   metadata:
    labels:
     app: myapp
     version: blue
   spec:
    containers:
    - name: myapp
      image: dileep232/app:latest
      ports:
      - containerPort: 8080
