service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: ClusterIP
  selector:
    app: app2
    version: blue
  ports:
    - port: 80
      targetPort: 8080
